# straight-outta

./: .env.example  .gitignore  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run_migrations.py  vite.config.js
.cursor/skills/seed-database/: SKILL.md
.cursor/skills/seed-database/artist-regions/south/: atlanta.txt
.cursor/skills/seed-database/artist-regions/west/: bay-area.txt  los-angeles.txt
.cursor/skills/seed-database/scripts/: seed.js
assets/: schema.sql
aws/playlist_refresher/: .env.example  README.md  build.sh  config.py  db.py  handler.py  requirements.txt  run_local.py  spotify.py
migrations/: 0002_add_playlists_update_time.sql  README.md
server/: api.js
src/: App.css  App.jsx  index.css  main.jsx
src/lib/: spotifyAuth.js
src/pages/: Callback.jsx  Play.jsx  Refresh.jsx
