[project]
name = "straight-outta"
version = "0.1.0"
description = "Straight Outta - Spotify playlist refresher"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing: allow untyped defs for now
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["config", "db", "spotify", "handler"]
path = "aws/playlist_refresher/*.py"
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
